manifests/planka/planka.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: planka-postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: planka-postgres
  template:
    metadata:
      labels:
        app: planka-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-storage
          readinessProbe: 
            exec:
              command: ["pg_isready", "-U", "postgres", "-d", "planka"]
            initialDelaySeconds: 10
            periodSeconds: 5
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: planka-postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: planka-postgres-service
spec:
  type: ClusterIP
  selector:
    app: planka-postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: planka-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: planka
  template:
    metadata:
      labels:
        app: planka
    spec:
      containers:
        - name: planka
          image: ghcr.io/plankanban/planka:2.0.0-rc.3
          ports:
            - containerPort: 1337
          volumeMounts:
            - name: favicons-storage
              mountPath: /app/public/favicons
            - name: user-avatars-storage
              mountPath: /app/public/user-avatars
            - name: background-images-storage
              mountPath: /app/public/background-images
            - name: attachments-storage
              mountPath: /app/private/attachments
      volumes:
        - name: favicons-storage
          persistentVolumeClaim:
            claimName: planka-favicons-pvc
        - name: user-avatars-storage
          persistentVolumeClaim:
            claimName: planka-user-avatars-pvc
        - name: background-images-storage
          persistentVolumeClaim:
            claimName: planka-background-images-pvc
        - name: attachments-storage
          persistentVolumeClaim:
            claimName: planka-attachments-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: planka-service
spec:
  type: ClusterIP
  selector:
    app: planka
  ports:
    - protocol: TCP
      port: 80 
      targetPort: 1337
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: planka-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod-cloudflare
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
  - hosts:
    - planka.seanchoo.top
    secretName: planka-tls
  rules:
    - host: "planka.seanchoo.top"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: planka-service
                port:
                  number: 80
